syntax="proto3";

package proto;

option go_package = "github.com/famesensor/playground-go-grpc/proto/user";

message GetUserMeReq {
}
