syntax = "proto3";

package proto;

import "proto/user/get_user_me_req.proto";
import "proto/user/user.proto";

option go_package = "github.com/famesensor/playground-go-grpc/proto/user";

service UserService {
    rpc GetUserMe(GetUserMeReq) returns (User);
}

